# Interpolation_of_SOC_New

./: .gitignore  Newmain_with_comment.py  drop_points.py  formula.md  models.py  plots_and_tabulars.ipynb  pyproject.toml  reading_datasets.py  train_models.py  train_models_signed.py  train_models_signed_temp.py  utils.py
.md/: allpossibleproblem.md  formula.md  plan.md
torchode/: odeint.py  repara.py  repara_init.py
